fix intellij warnings in styx-common